--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,15 @@
 			<scope>runtime</scope>
 		</dependency>
 
-			<!-- Junit -->
+		<!-- PostgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.7</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Junit -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
         	<artifactId>junit-jupiter-api</artifactId>
