--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,32 +1,43 @@
-name: Build and Publish Docker Image
+name: Build and Push Docker Image
 
 on:
-    push:
-        branches:
-            - develop #Triggering only on pushes to the develop branch
-    pull_request:
+  push:
+    branches: [ develop ]
 
 jobs:
-    build-and-push:
-        runs-on: ubuntu-latest
+  build-and-push:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v1
-              with:
-                username: ${ secrets.DOCKER_USERNAME }
-                password: ${ secrets.DOCKER_PASSWORD }
+      - name: Build project with Maven
+        run: mvn clean install -DskipTests
 
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v2
-              with:
-                context: .
-                file: Dockerfile
-                push: true
-                tags: your-dockerhub-username/your-repo-name:latest
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract Docker image metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: syed1012/ai-vms-backend
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
